--- a/index.html
+++ b/index.html
@@ -745,5 +745,8 @@
             element.style.transition = 'all 0.6s ease';
         });
     </script>
+     <a href="https://mohan24092003.github.io/chambalwaterproject/" target="_blank">
+      Click here
+    </a>
 </body>
 </html>
